--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -21,6 +21,6 @@
 
 <footer class="footer">
 <div class="container">
-<p class="text-muted">Place sticky footer content here.</p>
+<p class="text-muted">meen stack app</p>
 </div>
 </footer>
